# hermesbaby

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .hermesbaby  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  Package.wxs  README  README.md  README.rst  build-linux.sh  build-windows.cmd  hermesbaby.spec  poetry.toml  pyproject.toml  setup.cfg  setup.py  test_manual_check.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs_build.yml  docs_build_publish.yml  test_build_package.yml  test_build_package_publish.yml  test_build_package_publish.yml-deactivated  test_build_pyinstaller_windows.yml
_figures/: ud_hermesbaby.puml
config/: Kconfig  conf.py
docs/: conf.py  index.md  index.rst
docs/03-Write/: index.md
docs/04-Configure/: index.md
docs/06-Show-Room/: index.md
docs/06-Show-Room/_figures/: some_diagram.drawio
src/hermesbaby/: Kconfig  __init__.py  __main__ copy.py  __main__.py  conf.py  extensions.json  htaccess.yaml  installation_kind.py  pavement.py  setup.sh  skeleton.py  update_checker.py
src/hermesbaby/atlassian-admin/: create-release-tags.py
src/hermesbaby/ci/: Dockerfile  README.md  run-boilerplate.sh  run.sh  setup.sh
src/hermesbaby/drawio/: __init__.py
src/hermesbaby/drawio/_static/: drawio.css
src/hermesbaby/html_static/: custom.css
src/hermesbaby/loflot/: __init__.py
src/hermesbaby/partly/: README.md  __init__.py  test.py
src/hermesbaby/pre-post-build/: __init__.py
src/hermesbaby/semcrossrefs/: README.md  __init__.py  test_semcrossrefs.py
src/hermesbaby/templates/arc42-en/{{cookiecutter.directory}}/docs/01-Introduction-and-Goals/_figures/: quality_goals.puml
src/hermesbaby/templates/arc42-en/{{cookiecutter.directory}}/docs/09-Architectural-Decisions/: index.md
src/hermesbaby/templates/arc42-en/{{cookiecutter.directory}}/docs/10-Quality-Requirements/: index.md
src/hermesbaby/templates/arc42-en/{{cookiecutter.directory}}/docs/10-Quality-Requirements/_figures/: quality_tree.puml
src/hermesbaby/templates/arc42-en/{{cookiecutter.directory}}/docs/11-Risks-and-Technical-Debt/: index.md
src/hermesbaby/templates/log-ledger/{{cookiecutter.directory}}/: mk-my-day.sh
src/hermesbaby/theme_templates/: header.html
src/hermesbaby/update/: README.md  __init__.py
src/hermesbaby/vscode-extensions/: actboy168.tasks-0.16.1.vsix  danlevett.pattern-links-1.0.2.vsix  executablebookproject.myst-highlight-0.11.0.vsix
src/hermesbaby/web_access_ctrl/: create_htaccess_entries.py  htaccess.yaml
tests/: conftest.py  test_hb_win.bat  test_hermesbaby.py  test_htaccess.py  test_pdf_generation.py  test_skeleton.py  test_update_checker.py
tests/cmd/: test_hb.py
tests/data/bibliographies/docs/: bibliography.bib  index.md
tests/data/bibliographies/docs/bibliography/: novels.bib  some_other.bib
tests/data/htaccess/docs/: index.md
tests/data/images-in-dark-mode/docs/: index.md
tests/data/images-in-dark-mode/docs/_figures/: some_figure.drawio
tests/data/list-of-figures-of-tables/docs/: index.md
tests/data/partly-two/: .hermesbaby
tests/data/partly-two/docs/: index.md
tests/data/partly-two/docs/SomeSystem/: .hermesbaby  index.md
tests/data/partly-two/docs/SomeSystem/01-Introduction-and-Goals/: index.md
tests/data/partly-two/docs/SomeSystem/03-Context-and-Scope/: index.md
tests/data/partly-two/docs/SomeSystem/05-Building-Block-View/: index.md
tests/data/partly-two/docs/_components/: index.md
tests/data/partly-two/docs/_contexts/: index.md
tests/data/partly-two/docs/_systems/: index.md
tests/data/partly/docs/: glossary.md  glossary_f.md  index.md
tests/data/partly/docs/tree_a/: index.md
tests/data/partly/docs/tree_b/: index.md
tests/data/partly/docs/tree_c/: index.md
tests/data/partly/docs/tree_d/: index.md
tests/data/partly/docs/tree_e/: glossary.md  index.md
tests/data/partly/docs/tree_f/: index.md
tests/data/showcases/: .gitignore  index.md
tests/data/showcases/drawio/: index.md
tests/data/showcases/drawio/_figures/: 1.drawio  4.drawio  5.drawio
tests/data/showcases/tables/: index.md
tests/data/table-alignment/docs/: index.md
tests/data/use-myst-nb/docs/: data.csv  index.md  some_notebook.ipynb  some_other_notebook.ipynb  some_sort_of_executable_markdown.md
tests/data/user-defined-conf/docs/: conf.py
tests/e2e/: run.sh  test-0101-ci-create-pdf.sh  test-0200-templates.sh  test-bibliographies.bats  test-ci-create-pdf.bats  test-hello-world.bats  test-htaccess.bats  test-new.bats  test-partly-two.bats  test-partly.bats  test-showcase.bats  test-template.bats  test-templates.bats  test-templates.bats.sh
tests/e2e/bats/: README.md  vendor-helper-libs.sh
tests/e2e/test_helper/: load.bash
tests/manual-verification/28-table-alignment/docs/: index.md
