################################################################
#                                                              #
#  This file is part of HermesBaby                             #
#                       the software engineer's typewriter     #
#                                                              #
#      https://github.com/hermesbaby                           #
#                                                              #
#  Copyright (c) 2024 Alexander Mann-Wahrenberg (basejumpa)    #
#                                                              #
#  License(s)                                                  #
#                                                              #
#  - MIT for contents used as software                         #
#  - CC BY-SA-4.0 for contents used as method or otherwise     #
#                                                              #
################################################################

[tool.poetry]
name = "hermesbaby"
version = "2024.12.26"
description = "The Software and Systems Engineers' Typewriter"
authors = ["basejumpa <alexander.mannwahrenberg@gmail.com>"]
readme = "README.md"
packages = [{include = "hermesbaby", from = "src"}]


[tool.poetry.scripts]
hermesbaby = "hermesbaby.__main__:main"
hb = "hermesbaby.__main__:main"


[tool.poetry.dependencies]
python = "^3.10"
paver = "^1.3.4"
cookiecutter = "^2.6.0"
sphinx = "^8.1.3"
sphinx-autobuild = "^2024.10.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
